--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,7 @@ include ':usecase'
 project(':app-service').projectDir = file('./applications/app-service')
 project(':model').projectDir = file('./domain/model')
 project(':usecase').projectDir = file('./domain/usecase')
+include ':sqs-listener'
+project(':sqs-listener').projectDir = file('./infrastructure/entry-points/sqs-listener')
+include ':metrics'
+project(':metrics').projectDir = file('./infrastructure/helpers/metrics')
