--- a/applications/app-service/build.gradle
+++ b/applications/app-service/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'org.springframework.boot'
 
 dependencies {
+	implementation project(':rest-consumer')
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation project(':reactive-web')
 	implementation project(':metrics')
 	implementation project(':sqs-listener')
     implementation project(':model')
