--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,7 @@ include ':sqs-listener'
 project(':sqs-listener').projectDir = file('./infrastructure/entry-points/sqs-listener')
 include ':metrics'
 project(':metrics').projectDir = file('./infrastructure/helpers/metrics')
+include ':reactive-web'
+project(':reactive-web').projectDir = file('./infrastructure/entry-points/reactive-web')
+include ':rest-consumer'
+project(':rest-consumer').projectDir = file('./infrastructure/driven-adapters/rest-consumer')
