--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8082
 spring:
   webflux:
     base-path: "/api/v1"
@@ -13,11 +13,11 @@ spring:
       path: "/h2"
   profiles:
     include: null
+    active: local
 entrypoint:
   sqs:
-    region: "us-east-1"
-    endpoint: "http://localhost:4566"
-    queueUrl: "http://localhost:4566/000000000000/sample"
+    region: "us-east-2"
+    queueUrl: "https://sqs.us-east-2.amazonaws.com/294568841222/reporte_solicitud_aprobada"
     waitTimeSeconds: 20
     maxNumberOfMessages: 10
     visibilityTimeoutSeconds: 10
@@ -61,3 +61,7 @@ resilience4j:
         slidingWindowSize: 10
         minimumNumberOfCalls: 10
         waitDurationInOpenState: "10s"
+aws:
+  dynamodb:
+    endpoint: ""
+  region: "us-east-2"
