--- a/infrastructure/entry-points/reactive-web/build.gradle
+++ b/infrastructure/entry-points/reactive-web/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.6.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.reactivecommons.utils:object-mapper-api:0.1.0'
-
+    implementation "org.mapstruct:mapstruct:$mapstructVersion"
+    annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
     testImplementation 'org.reactivecommons.utils:object-mapper:0.1.0'
 }
